# yolox_ros

./: README.md  requirements.txt
bbox_ex_msgs/: package.xml
bbox_ex_msgs/msg/: BoundingBox.msg
yolox_ros_foxy/: package.xml  setup.cfg  setup.py
yolox_ros_foxy/exps/: yolox_nano.py
yolox_ros_foxy/launch/: yolox_nano_torch_gpu_camera.launch.py
yolox_ros_foxy/yolox_ros/: yolox_ros.py
yolox_ros_foxy/yolox_ros.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
yolox_ros_foxy/yolox_ros/utils/: utils.py
