<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolox_ros</name>
  <version>0.3.2</version>
  <description>The yolox_ros package</description>
  <maintainer email="misterlianben@gmail.com">Thian Lian Ben</maintainer>
  <license>Apache License, Version 2.0</license>
  <author email="misterlianben@gmail.com">Thian Lian Ben</author>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>
  <depend>bbox_ex_msgs</depend>
  <depend>yolox</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>